# WordclockX

./: .gitignore
Board/: WordclockX.kicad_pcb  WordclockX.kicad_prl  WordclockX.kicad_pro  WordclockX.kicad_sch  fp-info-cache  fp-lib-table  ibom.config.ini  sym-lib-table
Board/Libraries/: Wordclock.kicad_sym
Board/Libraries/STEP/: 2x16_LowProfile_FemaleSocket.stp  8x8 RGB LED Matrix v1.step
Board/Libraries/Wordclock.pretty/: 2088RGB-5.kicad_mod  2088RGB-5_no-holes.kicad_mod  LGA-6EP_2.5x2.5.kicad_mod  USB_C_Receptacle_GCT_USB4145.kicad_mod
Board/bom/: ibom.html
Code/: CMakeLists.txt  auto_flash.py  main.c
Code/board/: wordclockx.h
Code/hardware/: hardware.c  hardware.h  led.c  led_matrix.c  led_matrix.h  rtc.c  rtc.h  rtc_registers.h
Code/system/: clock.c  clock.h  fast_hsv2rgb.c  fast_hsv2rgb.h  led.c  led.h  main.c  shell.c  shell.h  shell_commands.c  shell_commands.h
Letters/: letters.ai  letters.dxf
Mechanical/: WordclockFrame.stl  uhr_komplett.STL  uhr_oben_links.STL  uhr_oben_rechts.STL  uhr_unten_links.STL  uhr_unten_rechts.STL
